Support for Java 25 - Update deprecations and removals